--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
         <title>Three.js Boilerplate</title>
     </head>
     <body>
+        <div class="loader"><p>Chargement <span class="curload">0</span>%</p></div>
         <div id="main"></div>
     </body>
 </html>
