--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,22 @@
         <title>Three.js Boilerplate</title>
     </head>
     <body>
-        <div class="ui"></div>
+        <div class="ui">
+            <div class="top">
+                <img src="#" class="logohermes" alt="">
+                <h2>Printemps</h2>
+                <h2>Ete 2019</h2>
+            </div>
+            <div class="bottom">
+                <button class="go">>> Decouvrir la collection</button>
+                <div class="ctas">
+                    <div class="part"><p class="lib">Partenariat 2019</p>
+                    <p class="val">Hermès | Gobelins</p></div>
+                    <div class="hint"><p>Nous vous recommandons de vivre l'experience</br> avec un casque de réalité virtuelle.</p></div>
+                    <div class="sound"><img src="#" class="soundlogo" alt=""></div>
+                </div>
+            </div>
+        </div>
         <div class="loader"><p>Chargement <span class="curload">0</span>%</p></div>
         <div id="main"></div>
     </body>
